<resources>
    <string name="app_name">STreetART Napoli</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">STreet ART Napoli</string>
    <string name="nav_header_subtitle">STreet ART Napoli</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Exit</string>
    <string name="nav_elem1">Home</string>
    <string name="nav_elem2">Old Town</string>
    <string name="nav_elem3">Materdei e Sanità</string>
    <string name="nav_elem4">Ponticelli</string>
    <string name="nav_elem5">San Giovanni a Teduccio</string>
    <string name="homeDescription">
        The App dedicated to all tourists and citizens of Naples with the aim of giving visibility to the splendid works created along the streets.\n\nDiscover the city including during your stay even the most hidden but freely available works.\n\nAn alternative point of view on the ever-changing city of Naples.\nHave fun!
    </string>
    <string name="ot_opera1_name">La Guerrigliera</string>
    <string name="ot_opera2_name">Madonna in estasi</string>
    <string name="ot_opera3_name">Che Marònn’ sto Riciclo!</string>
    <string name="ot_opera4_name">Pietà laica</string>
    <string name="ot_opera5_name">San Gennaro</string>
    <string name="ot_opera6_name">Fidel Castro </string>
    <string name="ot_opera7_name">Mission Possible</string>
    <string name="ot_opera8_name">La Speranza che risolleva l\'Amore ferito</string>
    <string name="ot_opera9_name">Pudicizia</string>
    <string name="ot_opera1_author">Alice Pasquini</string>
    <string name="ot_opera2_author">Banksy</string>
    <string name="ot_opera3_author">CRL</string>
    <string name="ot_opera4_author">Ernest Pignon </string>
    <string name="ot_opera5_author">Jorit Agoch</string>
    <string name="ot_opera6_author">Mono Gonzales e Tono Cruz </string>
    <string name="ot_opera7_author">Roxy in the Box </string>
    <string name="ot_opera8_author">Zilda</string>
    <string name="ot_opera9_author">Bosoletti</string>
    <string name="ot_opera1_address">Calata Trinità Maggiore, 32</string>
    <string name="ot_opera2_address">Piazza Gerolomini</string>
    <string name="ot_opera3_address">Via San Biagio dei Librai, 120</string>
    <string name="ot_opera4_address">Santa Chiara</string>
    <string name="ot_opera5_address">Via Vicaria Vecchia,34</string>
    <string name="ot_opera6_address">Via Mezzocannone, 14</string>
    <string name="ot_opera7_address">Piazza Riario Sforza</string>
    <string name="ot_opera8_address">Palazzo dell\'immacolatella, stazione marittima molo Angioino</string>
    <string name="ot_opera9_address">Via Emanuele De Deo, 46</string>
    <string name="ot_opera1_desc">Alice is an illustrator, painter and set designer, she populates the cities where she finds passionate, romantic, combative and in love women.\nIn the vicinity of Calata Trinità Maggiore, in front of the SKA (a squatter laboratory near Piazza del Gesù), a gentle guerrilla is represented with thick glasses and the covered head and a finger placed on the lips, as if to suggest being cautious and pretend not to have ever seen her. The fringe leaves her uncovered only one big blue eye.</string>
    <string name="ot_opera2_desc">Banksy we know him for the irreverent spirit, the real revolution of this constituted the English urban art. One of his stencils is present in Piazza dei Gerolomini, set among small votive altars and elderly inhabitants of the place, who have made him come as a new neighbor.\nIt is a Madonna in ecstasy that reveals over the head the image of a firearm, is the classic pure icon but dangerously modern. The English artist adds another piece to his international work, but this time by merging tradition with criticism and genius. </string>
    <string name="ot_opera3_desc">This is a stencil of CRL, not too large and not very visible along via San Biagio dei Librai, painting on a sheet set in the ancient stone of a historical building.\nA Madonna of Recycling; the ironic and careful ability to bring an icon with ancient features next to a symbol that recalls not only recycling but also difficult events that have hit the city. CRL represents a turning point which means: it will be hard and we will do it in our own way, but it will work!</string>
    <string name="ot_opera4_desc">His work was realized at the entrance of the monastery of Santa Chiara: la Pieta laica, as it was renamed, right in the street of the historic center of Naples where Pasolini had shot some scenes of the Decameron.\nThe unmistakable style reveals great technique and sensitivity, Pasolini holds in his arms what remains of his own body that is once again forced to undergo a violent tear, a death at the hands of others. I advise you to see it even after the damage, to understand that it is not easy, the coexistence between old and new, but difficult, and this Pietà is its emblem, strong and intense even in pieces.</string>
    <string name="ot_opera5_desc">The San Gennaro that stands out on the facade of a large Forcella palace is another work by Jorit and has a very special characteristic: its face is that of a worker friend of the artist.\nThe mural is more than 15 meters high and has an absorbed look upwards. More than between graffiti, it can almost be included in the category of paintings, even if made with the spray, thanks to the naturalness and depth of its expression. For Jorit, drawing inspiration from the inhabitants of the neighborhoods in which he works is a way to give greater humanity to his works.</string>
    <string name="ot_opera6_desc">The mural of Fidel Castro was painted in the historic center of Naples, as a tribute to the value of the Resistance. Created by Mono Gonzales and Tono Cruz, two internationally renowned street artists, it is located on the façade of the Mezzocannone Occupato social center, home to various collectives.\nThe two authors concluded it on the day of the funeral of Lider Maximo and wanted to portray Castro playing his face twice, while observing in two different directions. A work with a deep political and social meaning, in perfect line with the type of art of Gonzales, an artist committed to representing social injustices and always on the side of the weakest.</string>
    <string name="ot_opera7_desc">Very original murals that sees alongside the Patron of Naples, San Gennaro, and the painter Caravaggio, who spent the last years of his life in Naples. The Saint has in his hands a newspaper, Il Sole 24 Ore, while Caravaggio reads the New York Times with a Supersantos under his right foot. An element, the ball, which is a strong reference to the streets of Naples, where there are often kids playing football.</string>
    <string name="ot_opera8_desc">The artist introduces this work as well as others in the city choosing roofs, alleys without light, walled churches, places with a painful beauty. The artist\'s aim is to revisit the symbolistic and pre-Raphaelite paintings.</string>
    <string name="ot_opera9_desc">This work is inspired by the "Pudicizia", an eighteenth-century sculpture by the Venetian sculptor Antonio Corradini, housed inside the Sansevero chapel.\nBosoletti reinterprets a symbolic image of the city of Naples, making it an interactive work; as much of the murals made by the Argentine artist in fact, to appreciate the details, it is necessary to observe it through a phototagraphic filter that reverses its colors.\nThe work, which to the naked eye appears incomplete and poorly defined, through The negative effect is revealed in its completeness, offering the public a multiple vision and revealing its three-dimensionality.</string>
    <string name="ot_opera1_location">40.845568,14.251017</string>
    <string name="ot_opera2_location">40.851637,14.258531</string>
    <string name="ot_opera3_location">40.848975,14.256979</string>
    <string name="ot_opera4_location">40.859374,14.249135</string>
    <string name="ot_opera5_location">40.850118,14.260661</string>
    <string name="ot_opera6_location">40.846973,14.255957</string>
    <string name="ot_opera7_location">40.852121,14.260223</string>
    <string name="ot_opera8_location">40.841588,14.258761</string>
    <string name="ot_opera9_location">40.841469,14.244999</string>
    <string name="mt_opera1_name">Unknown</string>
    <string name="mt_opera2_name">Unknown</string>
    <string name="mt_opera3_name">Toto\'</string>
    <string name="mt_opera4_name">Resi-Ti-Amo</string>
    <string name="mt_opera5_name">Giardino Liberato</string>
    <string name="mt_opera6_name">Partenope</string>
    <string name="mt_opera7_name">Unknown</string>
    <string name="mt_opera8_name">I mangiamaccheroni </string>
    <string name="mt_opera1_author">Alex Senna</string>
    <string name="mt_opera2_author">Alex Senna</string>
    <string name="mt_opera3_author">Fabio Borrelli</string>
    <string name="mt_opera4_author">Bosoletti</string>
    <string name="mt_opera5_author">Bosoletti </string>
    <string name="mt_opera6_author">Bosoletti</string>
    <string name="mt_opera7_author">Blue</string>
    <string name="mt_opera8_author">Naf-Mc</string>
    <string name="mt_opera1_address">Via Sanità, 11</string>
    <string name="mt_opera2_address">Via Sanità, 46</string>
    <string name="mt_opera3_address">Via Santa Maria Antasaecula</string>
    <string name="mt_opera4_address">Basilica di Santa Maria della Sanità</string>
    <string name="mt_opera5_address">Salita S.Raffaele,55</string>
    <string name="mt_opera6_address">Salita S.Raffaele,38</string>
    <string name="mt_opera7_address">EX OSPEDALE PSICHIATRICO, via Matteo Renato Imbriani 218</string>
    <string name="mt_opera8_address">Largo Gaspare Colorito</string>
    <string name="mt_opera1_desc">This time the author represent his concept of a number 10. Well known is the symbiotic relationship between city of Naples and football, the number ten is the symbol of somthing like an hero for the city as Maradona did. </string>
    <string name="mt_opera2_desc"> The Author was inspired by common life scenes into the district, and represent a typical family. </string>
    <string name="mt_opera3_desc">Fabio Borrelli is one of the most popular tattoo artists-designers in the city and this time he passed, joining the passion for drawing that for Naples and for the artists who have made the city great.\nIn the road that gave birth to Totò, stands a beautiful design of the Prince of Laughter that remedies the serious lack of information on the exact allocation of the birthplace of Antonio De Curtis.</string>
    <string name="mt_opera4_desc">The work represents two young lovers who support each other almost like a dance. Bosoletti had as its source of inspiration the true story of two boys in the neighborhood, who fought and won a serious illness by loving each other.\nThe mural was funded by an association of the area together with the Basilica of Santa Maria alla Sanità and is the symbol of an active cultural and artistic resistance of the neighborhood.</string>
    <string name="mt_opera5_desc">The depiction of a girl with an ethereal and afflicted face.\nThe work is called Liberated Garden.</string>
</resources>