<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_elem1"
            android:checked="true"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/nav_oldtown"
            android:icon="@drawable/ic_oldtown"
            android:title="@string/nav_elem2" />
        <item
            android:id="@+id/nav_materdei"
            android:icon="@drawable/ic_materdei"
            android:title="@string/nav_elem3" />
        <item
            android:id="@+id/nav_ponticelli"
            android:icon="@drawable/ic_ponticelli"
            android:title="@string/nav_elem4" />
        <item
            android:id="@+id/nav_sgiovanni"
            android:icon="@drawable/ic_sgiovanni"
            android:title="@string/nav_elem5" />
    </group>


</menu>
